# LitDetect

./: .gitignore  .gitmodules  LICENSE  README.md  cache.py  cat_conf.py  clearn_logs.py  main.py  onnx_check.py  pyproject.toml  requirements.txt  val_batch_onnx.py  数据增强可视化.ipynb  数据集可视化.ipynb  生成ONNX模型.py  预测_目录_TORCH_JSON输出.py  验证_验证集_ONNX_图片输出.py  验证_验证集_TORCH_指标输出.py
callbacks/: detection_metrics.py  mcc.py
conf/: base.yaml  config.yaml
conf/ds/: fb.yaml  fb2.yaml  jz.yaml  jz2.yaml  ldl.yaml  luna16.yaml  luna16_3d.yaml  mt.yaml  nodule.yaml  nodule_big.yaml  nodule_big2.yaml  sz.yaml  t.yaml  x.yaml
conf/md/: dino.yaml  dino_swinb.yaml  frcnn.yaml  frcnn_dinov3.yaml  yolo11.yaml
conf/trainer/: ddp.yaml  dev.yaml  si.yaml
data/: __init__.py  cache_yolo.py  data_interface.py
datasets/: luna16prepare.py
litdetect/: cat_conf.py  clearn_logs.py  onnx_inferer.py  scripts_init.py  train.py  trt_inferer.py
litdetect/callbacks/: __init__.py  ap.py  detection_metrics.py  detection_metrics_3d.py  ema.py  metrics.py  predic_pic.py
litdetect/data/: OD.py  cache_yolo.py  data_interface.py  detr.py  litdetect.py  my_yolo.py  scale_tookits.py  yolo.py
litdetect/model/: __init__.py  detr_module.py  faster_rcnn.py  model_interface.py  yolo11.py
model/: __init__.py  yolo11.py
scripts/: 3d评估json.py  cache.py  cat_conf.py  onnx_check.py  train.py  生成ONNX模型.py  预测3d_目录_TORCH_JSON输出.py  预测_目录_ONNX_JSON输出.py  预测_目录_TORCH_JSON输出.py  预测_目录_TRT_JSON输出.py  预测_目录_TRT_ONNX_JSON输出.py  验证_验证集_ONNX_图片输出.py  验证_验证集_TORCH_指标输出.py  验证_验证集_TORCH_指标输出3D.py  验证_验证集_TRT_ONNX_图片指标输出.py  验证_验证集_TRT_图片输出.py
scripts/datasets/: luna16prepare3d.py  统计LUNA16数据集spacing.py
src/litdetect/: cache.py  clearn_logs.py  scripts_init.py  train.py
src/litdetect/callbacks/: detection_metrics.py  metrics.py  plotting.py  predic_pic.py
src/litdetect/data/: OD.py  cache_yolo.py  data_interface.py  detr.py  my_yolo.py
src/litdetect/model/: detr_module.py  dino.py  faster_rcnn.py  model_interface.py  yolo11.py
ultralytics/cfg/: default.yaml
