[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litdetect"
version = "0.1.0"
description = "deeplearning framework for object detection using PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["detection", "YOLO", "PyTorch", "object-detection"]
authors = [
  { name = "wuxiheng", email = "abakir@qq.com" }
]
maintainers = [
  { name = "wuxiheng", email = "abakir@qq.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ultralytics>=8.3.164",
    "albumentationsx>=2.0.9",
    "colorama>=0.4.6",
    "hydra-core>=1.3.2",
    "lightning>=2.5.2",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "transformers>=4.55.2",
    "onnxruntime>=1.22.0",
    "onnxruntime-gpu>=1.22.0",
    "onnxsim>=0.4.36",
    "faster-coco-eval>=1.6.7"
]


[tool.setuptools]
package-dir = {"" = "."}   # 空字符串键 "" 表示根包（即 mydl/）的路径是当前目录 "."

[tool.setuptools.packages.find]
include = ["litdetect*"]
namespaces = false

[project.urls]
homepage = "https://github.com/AbaK1r/LitDetect"
repository = "https://github.com/AbaK1r/LitDetect"
documentation = "https://github.com/AbaK1r/LitDetect#readme"
bug-tracker = "https://github.com/AbaK1r/LitDetect/issues"

[project.scripts]
litdetect-train = "litdetect.train:main"


